<resources>
    <string name="app_name">ChefooD</string>

    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="photo">Photo</string>


    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out_fragment">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="user_status_fmt">User: %s</string>
    <string name="user_title_text">User Sign In</string>

    <!--Hints-->
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_forgot_password">Forgot your password ?</string>
    <string name="hint_register">Don\'t have an account? Register here</string>
    <string name="hint_email">Email</string>
    <string name="search_Hint">Search</string>

    <!--Button texts-->
    <string name="btn_log_in">Sign in</string>
    <string name="or">OR</string>


    <string name="twitterUserName">\@twitterUserName</string>


    <!--User Profile Strings-->
    <string name="user_name">user.name  </string>
    <string name="following">Following</string>
    <string name="numberOfFollowing">0</string>
    <string name="posts">Posts</string>
    <string name="numberOfPosts">0</string>
    <string name="followers">Followers</string>
    <string name="numberOfFollowers">0</string>
    <string name="edit_your_profile_fragment">Edit Your Profile</string>
    <string name="about">This is my Personalised Description</string>
    <string name="personal_website">this_is_my_website.com</string>

    <!--User Profile Settings Strings-->
    <string name="options_account_toolbar">Options</string>
    <string name="account_settings">Account Settings</string>
    <string name="change_photo">Change Photo</string>
    <string name="display_name">display name</string>
    <string name="private_information">Private Information</string>

    <!--Sign up Fragment string-->
    <!--   BUTTONS   -->
    <string name="change_to_fragment_button">Change to Fragment</string>
    <string name="ms_chef_button">Ms. Chef</string>
    <string name="mrs_chef_button">Mrs. Chef</string>

    <string name="profile_picture_button">Select profile picture</string>

    <!--   HINTS    -->
    <string name="full_name_hint">Full Name</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="email_hint">Email</string>
    <string name="registration_success">Registration successful, please check your email inbox for confirmation</string>
    <!--DESCRIPTION-->

    <string name="profile_picture">Profile picture added by user</string>

    <!--Forgot password fragment strings -->

    <string name="hint_forgot_password_email">Enter your email here</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="password_receive_text">Your password will be sent to your email</string>
    <string name="button_send_password">Send Mail</string>
    <string name="confirm_sing_out">Are you sure you want to SignOut?</string>
    <string name="signing_out">Signing Out…</string>
    <string name="post">Post</string>

    <!--Login layout-->

    <string name="hint_registerHere">No account? Register here for FREE</string>

    <!--Intent extras-->
    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return_to_fragment</string>

    <!-- Bundle args names -->
    <string name="activity_number">activity_number</string>

    <!--Activity Names-->
    <string name="profile_activity">Profile Activity</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="edit_profile_fragment">EditProfile Fragment</string>
    <string name="view_post_fragment">View Post Fragment</string>

    <!--Firebase Database fields -->

    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_posts">posts</string>

    <string name="field_username">username</string>
    <string name="field_user_id">userId</string>
    <string name="field_post_id">postId</string>
    <string name="field_likes">Likes</string>
    <string name="field_profile_photo">mProfileImgUrl</string>
    <string name="field_food_photo">mFoodImgUrl</string>
    <string name="field_recipe">mRecipe</string>
    <string name="field_ingredients">mIngredients</string>
    <string name="field_description">mDescription</string>
    <string name="field_date_created">date_created</string>

    <string name="field_image_path">image_path</string>
    <string name="field_display_name">display_name</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>

    <!--Welcoming Slides -->

    <string name="previous_slide">previous</string>
    <string name="next_slide">Next</string>
    <string name="skip_slide">Skip</string>
    <string name="user_name_and_last_name">User Name and Last Name</string>

    <string name="image_description_share">Write something about this food....</string>
    <string name="upload">Upload</string>
    <string name="choose_picture">Picture</string>
    <string name="image_ingredients_share">Write down the ingredients...</string>
    <string name="photo_add">PHOTO</string>
    <string name="open_camera">Open camera</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="string_recipe">Write down the recipe..</string>
    <string name="please_select_picture">Please select a picture</string>
    <string name="go_back_signUpFragment">Back</string>
    <string name="click_here_or_on_the_profile_picture_to_change_profile_photo">click on profile picture to change profile photo</string>
    <string name="empty_line">__________________________________</string>

    <!--Camera Strings-->
    <string name="permission_needed">Permission is needed in order to use this functionality</string>
    <string name="fill_all_fields">Please fill all the fields</string>
    <string name="could_not_upload_try_again">COULD NOT UPLOAD PICTURE! TRY AGAIN</string>
    <string name="fill_or_not">Are you sure you don\'t want to fill every field?</string>
    <string name="confirm">Confirm</string>
    <string name="yes"> YES </string>
    <string name="no">NO</string>
    <string name="todo">TODO</string>
    <string name="post_added">Post added successfully.</string>
    <string name="liked_by_whoever_eve_and_30_others">Liked by whoever, eve, and 30 others</string>
    <string name="username_caption_caption">username + caption #caption</string>
    <string name="view_all_3_commentlist">View all 3 commentList</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="add">Add</string>
    <string name="would_you_like_to_delete_the_post">Would you like to delete this post?</string>
    <string name="comment">Comment</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe">Recipe</string>
    <string name="comment_">Comment</string>
    <string name="description">Description...</string>
    <string name="_3_days_ago">3 days ago</string>
    <string name="epsum_lorem">epsum lorem</string>
    <string name="creation_date">creation_date</string>
    <string name="finito">FINISH</string>
    <string name="like">Like</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="camera">Camera</string>
    <string name="gallery">gallery</string>
    <string name="chose_an_option">chose an option</string>
    <string name="mobile_data">Mobile-Data</string>
    <string name="wifi">WIFI</string>
    <string name="sign_out_anyway">sign out anyway</string>
    <string name="do_you_really_want_to_sign_out">DO you really want to sign out?</string>
    <string name="there_is_no_description_for_your_post_continue">There is no description for your post, Continue?</string>
    <string name="report">Report</string>
    <string name="nr_likes">%d Likes</string>
    <string name="nr_like">%d Like</string>
    <string name="comment_nr">%d Comment</string>
    <string name="comments_nr">%d Comments</string>
    <string name="no_des_av">No description available</string>
    <string name="no_ing_av">No ingredients available</string>
    <string name="no_rec_av">No recipe available</string>
    <string name="hour_ago">An hour ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="days_ago">%d days ago</string>
    <string name="one_day_ago">%d day ago</string>
    <string name="minutes_ago">few minutes ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="one_week_ago">%d Week ago</string>
    <string name="weeks_ago">%d Weeks ago</string>
    <string name="now">Just now</string>

</resources>