<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border_color_top">

        <Toolbar
            android:background="@color/transp"
            android:id="@+id/profileToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/close_share_nextActivity"
                    android:padding="5dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:onClick="onClick"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/orange_arrow_left" />

                <TextView
                    android:id="@+id/textview_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload"
                    android:textStyle="bold"
                    android:background="@drawable/input_fields_frame_grey"
                    android:padding="10dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15sp"
                    android:textSize="16sp"
                    android:textColor="@color/orange"
                    android:layout_centerVertical="true"/>


            </RelativeLayout>

        </Toolbar>

    </android.support.design.widget.AppBarLayout>

</merge>